// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/categories form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "suspense": true,
        "url": "categories?limit=500",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "categories/defaults",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/categories form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "suspense": true,
        "url": "categories?limit=500",
      },
    ],
    Array [
      Object {
        "loading": true,
        "method": "get",
        "url": "categories/defaults",
      },
    ],
    Array [
      Object {
        "data": Object {
          "description": undefined,
          "name": "测试分类",
          "parentId": 0,
          "sort": 50,
        },
        "loading": true,
        "method": "POST",
        "url": "categories",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
